2012-08-11  Abhishek Arya  <inferno@chromium.org>

        Unreviewed. 

        Removing newly added assert in r125351 since it is exposing
        legitimate layout bugs in few tests. We will re-add the assert
        after fixing those bugs. Failures are tracked in webkit bug 93766. 

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::removeFromTrackedRendererMaps):

2012-08-11  Levi Weintraub  <leviw@chromium.org>

        Track block's positioned objects like percent-height descendants
        https://bugs.webkit.org/show_bug.cgi?id=89848

        Reviewed by Abhishek Arya.

        The previous method for tracking a RenderBlock's out-of-flow positioned descendants was error prone,
        subject to becoming inconsistent, and in the case of removePositionedObjects, inefficient. This patch 
        extracts the algorithm used for percent height descendants and re-uses it for positioned objects. This same
        method could further be re-used for floats.

        This change removes the m_positionedObjects pointer, which brings RenderBlock's size down (yay!).

        Test: fast/block/positioning/relayout-nested-positioned-elements-crash-2.html

        * rendering/RenderBlock.cpp:
        (SameSizeAsRenderBlock):
        (WebCore):
        (WebCore::removeBlockFromDescendantAndContainerMaps):
        (WebCore::RenderBlock::~RenderBlock):
        (WebCore::RenderBlock::addOverflowFromPositionedObjects):
        (WebCore::RenderBlock::layoutBlockChildren):
        (WebCore::RenderBlock::layoutPositionedObjects):
        (WebCore::RenderBlock::markPositionedObjectsForLayout):
        (WebCore::clipOutPositionedObjects):
        (WebCore::RenderBlock::selectionGaps):
        (WebCore::RenderBlock::insertIntoTrackedRendererMaps):
        (WebCore::RenderBlock::removeFromTrackedRendererMaps):
        (WebCore::RenderBlock::positionedObjects):
        (WebCore::RenderBlock::insertPositionedObject):